# MovieRequestEggpoker

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.bat  run.sh
app/: __init__.py  db.py  extensions.py  jackett.py  jellyfin.py  main.py  qbittorrent.py  routes.py  storage.py
app/static/: index.js  login.js  style.css
app/templates/: index.html  login.html
app/templates/fragments/: qbittorrent_stats.html  search_res.html  user.html
deploy/: .env.override  entrypoint.sh  start.sh  stop.sh
deploy/linux/: storage_config.json
deploy/windows/: storage_config.json
tests/: test_torrent.py
tool/: dev_launch.py  generate_deploy_env.py  gunicorn.conf.py  launch.py
