[project]
name = "movie-request-service"
version = "0.1.0"
description = """
minimal movie request service where users can request movies which will be downloaded and stored on the server
"""
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "flask[async]",
    "httpx",
    "python-dotenv",
    "dataclasses_json",
    "libtorrent",
    "requests_toolbelt",
    "guessit",
]

[dependency-groups]
dev = ["pytest", "pytest-flask"]
tool = []
